feat: api for get my assignments
