# docs/swagger.json
@@ -151,6 +151,25 @@
                 "responses": {}
             }
         },
+        "/api/assignments": {
+            "get": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Assessments"
+                ],
+                "summary": "GetAssignments",
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    }
+                }
+            }
+        },
         "/api/assignments/:versionId/assign": {
             "put": {
                 "consumes": [
@@ -328,6 +347,25 @@
                     }
                 }
             }
+        },
+        "/api/employees/my-assignments": {
+            "get": {
+                "tags": [
+                    "Employees"
+                ],
+                "summary": "Get my assignments",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/hrm.AssessmentAssignmentModel"
+                            }
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
@@ -449,6 +487,26 @@
                 }
             }
         },
+        "hrm.AssessmentAssignmentModel": {
+            "type": "object",
+            "properties": {
+                "assessmentId": {
+                    "type": "integer"
+                },
+                "assessmentName": {
+                    "type": "string"
+                },
+                "description": {
+                    "type": "string"
+                },
+                "version": {
+                    "type": "integer"
+                },
+                "version_id": {
+                    "type": "integer"
+                }
+            }
+        },
         "hse.AssessmentModel": {
             "type": "object",
             "properties": {
@@ -496,6 +554,9 @@
             "type": "object",
             "properties": {
                 "userId": {
+                    "type": "integer"
+                },
+                "versionId": {
                     "type": "integer"
                 }
             }
